# CynixBot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  Privacy.md  README.md  Terms.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  ruff.yml
alembic/: env.py
alembic/versions/: 4f9aae97df85_initial_migration.py
src/: __init__.py  bot.py
src/cogs/: dev.py
src/utils/: checks.py  endpoints.json  error_reporting.py  errors.py  logger.py
utils/: __init__.py
