[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CynixBot"
version = "0.0.1"
description = "A Discord bot."
authors = [
    { name = "SpiritTheWalf (Spirit Pearce)", email = "spirit.pearce@gmail.com" },
    { name = "Cytanix"}
]
requires-python = ">=3.13"

dependencies = [
    "discord.py>=2.6.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "alembic",
]

[tool.setuptools]
package-dir = {"" = "src"}

# ----------------------------------------
# Linting + Formatting
# ----------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------
# Type Checking
# ----------------------------------------
[tool.mypy]
python_version = "3.10"

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

mypy_path = ["src"]

ignore_missing_imports = true

# ----------------------------------------
# Alembic
# ----------------------------------------
[tool.alembic]
# path to migration scripts
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = ".venv/bin/ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

